--- a/Welcome.html
+++ b/Welcome.html
@@ -34,7 +34,7 @@
     				</div>
     				<br>
     				<div class="form-group">        
-        				<a href="home.html" class="btn btn-default new" ><b>Submit</b></a>
+        				<a href="index.html" class="btn btn-default new" ><b>Submit</b></a>
     				</div>
   				</form>
 
