--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="jumbotron header text-center people">
 		<h1> The developers </h1>
 
-		<button type="button" class="btn btn-info dev" data-toggle="collapse" data-target="#demo"><span class="glyphicon glyphicon-menu-down"></span></button>
+		<button type="button" class="btn btn-info dev" data-toggle="collapse" data-target="#demo"><span class="glyphicon glyphicon-menu-down">v</span></button>
   <div id="demo" class="collapse">
   <div class="dev" id = "devs">
 		<div class="row">
